<resources>
    <string name="app_name">Book Review Club</string>
    <string name="button_addBook">Add Book</string>
    <string name="button_saveBook">Save Book</string>
    <string name="hint_bookTitle">Book Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_review">Review</string>
    <string name="hint_genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="hint_stageOfReading">Stage Of Reading</string>
    <string name="menu_addBook">Add</string>
    <string name="menu_cancelBook">Cancel</string>
    <string name="save_book">Save</string>
    <string name="enter_title_message">Please Enter a Book Title</string>
    <string name="enter_review_message">Please leave a review!</string>
    <string name="enter_rating_message">Please leave a rating!</string>
    <string name="enter_genre_message">Select a genre for the book!</string>
    <string name="enter_stage_of_reading_message">Select your stage of reading for the book!</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_book_image">Select the book image</string>
    <string name="change_book_image">Change book image</string>
    <string name="club_name">Book Review Club</string>
    <string name="genre">Genres</string>
    <string name="stageOfReading">Stage Of Reading</string>
    <string name="enter_your_name_string">Enter your name</string>
    <string name="enter_your_email_string">Enter your email</string>
    <string name="password_string">password</string>
    <string name="verify_password_string">Verify your password</string>
    <string name="logo_image_descrp">BRC Logo</string>
    <string name="btnLinkToRegisterScreen">Not a Member? Sign Up</string>
    <string name="btnLinkToLoginScreen">Already a Member? Log In</string>
    <string name="log_in_string">LOG IN</string>
    <string name="sign_up_string">SIGN UP</string>
    <string-array name="select_genre">
        <item>Adventure</item>
        <item>Children</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Fiction</item>
        <item>Flowers</item>
        <item>Mystery</item>
        <item>Non-Fiction</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
    </string-array>
    <string-array name="select_stage_of_reading">
        <item>Want to Read</item>
        <item>Currently Reading</item>
        <item>Read</item>
        <item>Haven\'t Considered</item>
        <item>Considering</item>
    </string-array>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="home">Home</string>
    <string name="night">Night Mode</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>

</resources>